# Crypto_project

./: .env  Cargo.toml  Dockerfile  docker-compose.yml  init.sql  package-lock.json  package.json
bitcoin-explorer-frontend/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
bitcoin-explorer-frontend/public/: index.html
bitcoin-explorer-frontend/src/: App.css  App.test.js  App.tsx  index.css  index.tsx
bitcoin-explorer-frontend/src/components/: BlockHeightComponent.tsx
bitcoin-explorer-frontend/src/components/Header/: Header.css  Header.tsx
bitcoin-explorer-frontend/src/components/OffChain/: OffChain.css  OffChain.tsx
bitcoin-explorer-frontend/src/components/OnChain/: OnChain.css  OnChain.tsx
bitcoin-explorer-frontend/src/components/PriceData/: PriceData.css  PriceData.tsx
bitcoin-explorer-frontend/tests/: example.spec.tsx
src/: main.rs  off_chain.rs  on_chain.rs  price_data.rs
