[package]
name = "bitcoin_explorer_backend"
version = "0.1.0"
edition = "2021"

# Add these dependencies
[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.4", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

